# CatsVsDogs

./: .gitignore  catsvsdogs.ipynb  files_df.csv  pyproject.toml
src/: index.py  main.py
src/data_loaders/: fetcher.py
src/data_processers/: data_processer.py
src/models/: __init__.py  alexnet.py  cnn.py  utils.py  vgg16.py
src/models/abstract/: model.py
